ADD_SUBDIRECTORY(kdTree)
ADD_SUBDIRECTORY(cloudDensity)
ADD_SUBDIRECTORY(cloudMesh)
ADD_SUBDIRECTORY(computeNormal)
ADD_SUBDIRECTORY(cloudChoose)
ADD_SUBDIRECTORY(eigenInCloud)
ADD_SUBDIRECTORY(cloudBoundary)
ADD_SUBDIRECTORY(cloudBndryDynamic)
ADD_SUBDIRECTORY(cloudCurvature)
ADD_SUBDIRECTORY(cloudPlane)
ADD_SUBDIRECTORY(cloudSample)
ADD_SUBDIRECTORY(cloudRegistration)
ADD_SUBDIRECTORY(cloudDuplicate)
ADD_SUBDIRECTORY(testCC)