ADD_SUBDIRECTORY(kdTree)
ADD_SUBDIRECTORY(cloudDensity)
ADD_SUBDIRECTORY(cloudMesh)
ADD_SUBDIRECTORY(computeNormal)
ADD_SUBDIRECTORY(cloudChoose)
ADD_SUBDIRECTORY(eigenInCloud)
ADD_SUBDIRECTORY(cloudBoundary)
ADD_SUBDIRECTORY(cloudBndryDynamic)
ADD_SUBDIRECTORY(cloudCurvature)
ADD_SUBDIRECTORY(cloudPlane)
ADD_SUBDIRECTORY(cloudSample)
ADD_SUBDIRECTORY(cloudRegistration)
ADD_SUBDIRECTORY(cloudDuplicate)
ADD_SUBDIRECTORY(testCC)
ADD_SUBDIRECTORY(vcgMesh)
ADD_SUBDIRECTORY(cloudFlannSearch)
ADD_SUBDIRECTORY(cloudSeg)
ADD_SUBDIRECTORY(mesh2Cloud)
ADD_SUBDIRECTORY(cloudFilter)
ADD_SUBDIRECTORY(cloudFeatureFit)
ADD_SUBDIRECTORY(CloudConeFit)